WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278730
REGRESSION(
282779@main
) Broke Apple Internal builds
https://bugs.webkit.org/show_bug.cgi?id=278730
Summary
REGRESSION(282779@main) Broke Apple Internal builds
Jonathan Bedard
Reported
2024-08-27 08:12:42 PDT
https://commits.webkit.org/282779@main
broke many Apple Internal builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2024-08-27 08:13:01 PDT
rdar://134780683
Radar WebKit Bug Importer
Comment 2
2024-08-27 08:13:18 PDT
<
rdar://problem/134782036
>
Jonathan Bedard
Comment 3
2024-08-27 08:23:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32766
EWS
Comment 4
2024-08-27 08:32:15 PDT
Committed
282790@main
(1d38892f5070): <
https://commits.webkit.org/282790@main
> Reviewed commits have been landed. Closing PR #32766 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug