Cherry-pick 282790@main (1d38892f5070). https://bugs.webkit.org/show_bug.cgi?id=278730

REGRESSION(282779@main) Broke Apple Internal builds
    https://bugs.webkit.org/show_bug.cgi?id=278730
    rdar://134780683

    Unreviewed internal build fix.

    * Source/WTF/wtf/SystemTracing.h: Add FinalizeRenderingUpdate signpost.

    Canonical link: https://commits.webkit.org/282790@main

Canonical link: https://commits.webkit.org/282416.49@webkitglib/2.46